# py_typed_events

./: .gitignore  .pre-commit-config.yaml  README.md  TODOs.md  justfile  py_typed_events.py  pyproject.toml  setup.py
examples/: example.py
py_typed_events/: __init__.py  event.py  event_descriptor.py
scripts/: install-git-hooks.py  pre-commit.py
src/: __init__.py  event.py  event_descriptor.py
tests/: test_foo.py
